compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteWhen.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun test(a: Any) {
    when (a)<!SYNTAX!><!>
}
